# channels

./: Anchor.toml  copyIdl.js  package-lock.json  package.json  readme.md
anchor-token-metadata/: Cargo.toml
anchor-token-metadata/src/: lib.rs
app/: package.json
app/public/: index.html
app/src/: Global.css  idl.json  index.css  index.tsx
app/src/components/: Home.tsx  New.tsx
app/src/components/find/: ChannelInteractiveCard.tsx  ChannelOverview.tsx  Find.tsx  SearchBar.tsx  SubscriptionsForWallet.tsx
app/src/modules/: channels.tsx  decodeMetadata.tsx  findChannels.tsx  interactWithChannels.tsx  newChannels.tsx  utils.ts
app/src/wrapper/: ComponentSwitch.tsx  NavigationBar.tsx  Notification.tsx  WalletWrapper.tsx  wrapper.css
programs/channels/: Cargo.toml
programs/channels/src/: lib.rs
tests/: channels.js  channels.ts
tests/helpers/: metadataHelpers.js  tokenAccountInstructions.js  tokenAccountQueries.js
