cargo-features = ["edition2021"]

[package]
name = "anchor-token-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.1"
borsh = "0.9.1"
spl-token = "3.2.0"
anchor-lang = "0.18.0"
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }