[package]
name = "channels"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "channels"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
spl-token = "3.2.0"
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
anchor-token-metadata = { path = "../../anchor-token-metadata" }